[package]
name = "gravity-lens"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
derive_more = { version = "2", features = ["deref", "deref_mut"] }
glam = { version = "0.30", features = ["serde"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
